fix: z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1061,7 +1061,7 @@ footer {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 15;
   width: 100%;
   height: 100%;
   left: 40%;
